--- a/deno.json
+++ b/deno.json
@@ -1,7 +1,7 @@
 {
   "tasks": {
-    "start": "deno run --allow-net --allow-env --allow-read --allow-write --allow-run main.js",
-    "dev": "deno run --allow-net --allow-env --allow-read --allow-write --allow-run --watch main.js"
+    "start": "deno run --allow-net --allow-env --allow-read --allow-write --allow-run --unstable-worker-options main.js",
+    "dev": "deno run --allow-net --allow-env --allow-read --allow-write --allow-run --unstable-worker-options --watch main.js"
   },
   "imports": {
     "oak": "https://deno.land/x/oak@v12.6.1/mod.ts",
